# pymodelet

./: LICENSE  README.md  TRIBUTE.de.md  TRIBUTE.ja.md  TRIBUTE.ko.md  TRIBUTE.md  TRIBUTE.zh.md  pyproject.toml
.github/workflows/: pages.yml
docs/: compare-python.html  index.html  robots.txt  sitemap.xml
docs/de/: compare-python.html  index.html
docs/ja/: compare-python.html  index.html
docs/ko/: compare-python.html  index.html
docs/zh/: compare-python.html  index.html
examples/: one_to_many.py
scripts/: build-i18n.mjs
site-src/: compare-python.html  index.html
src/modelet/: __init__.py  context.py  dialect.py  entity.py  exceptions.py  model.py  paging.py  persistence.py  rows.py  statement.py
tests/: conftest.py  test_model.py  test_persistence.py
